# zkcp

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: dlog_secp256k1_sha256.rs  dlog_secp256k1_sudoku.rs  sha256_sudoku.rs
src/: lib.rs  program.rs
src/proofs/: dlog_secp256k1_generic.rs  dlog_secp256k1_sha256.rs  dlog_secp256k1_sudoku.rs  mod.rs  sha256_generic.rs  sha256_sudoku.rs
zkvm/: README.md
zkvm/common/: Cargo.toml
zkvm/common/src/: lib.rs  secp256k1.rs  sudoku.rs
zkvm/dlog_secp256k1_sha256/: Cargo.toml
zkvm/dlog_secp256k1_sha256/src/: main.rs
zkvm/dlog_secp256k1_sudoku/: Cargo.toml
zkvm/dlog_secp256k1_sudoku/src/: main.rs
zkvm/sha256_sudoku/: Cargo.toml
zkvm/sha256_sudoku/src/: main.rs
